Return status created with location header
